--- a/infoPage.css
+++ b/infoPage.css
@@ -1,25 +1,27 @@
 .info-CenteringContainer {
+	display: table;
 	width: 100%;
 	height: 100%;
-	display: table;
+	position: relative;
 }
 
 .info-TitleContainer {
-	vertical-align: middle;
 	display: table-cell;
+	vertical-align: middle;
 }
 
 .info-Banner {
 	position: absolute;
 	top: 30%;
-	left: 38px;
-	right: 38px;
+	left: 10%;
+	right: 10%;
 	transform: translateY(-50%);
 }
 
 .info-Post {
-	width: 60%;
-	margin: 3px auto;
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .info-PostTitle {
@@ -80,20 +82,15 @@
 .info-Footer {
 	position: absolute;
 	text-align: center;
-	bottom: 11%;
+	left: 5%;
+	right: 5%;
+	bottom: 2%;
 	transform: translateY(-50%);
 	color: #EEE;
-	left: 40px;
-	right: 40px;
 	font-size: 0.5rem;
 }
 
 @media (min-width: 360px) {
-	.info-Banner {
-		left: 46px;
-		right: 46px;
-	}
-	
 	.info-Post {
 		margin-top: 6px;
 		margin-bottom: 6px;
@@ -101,11 +98,6 @@
 }
 
 @media (min-width: 400px) {
-	.info-Banner {
-		left: 52px;
-		right: 52px;
-	}
-	
 	.info-Banner > .info-PostTitle {
 		font-size: 0.8rem;
 		padding: 0 6px;
@@ -143,11 +135,6 @@
 }
 	
 @media (min-width: 500px) and (min-height: 320px) {
-	.info-Banner {
-		left: 80px;
-		right: 80px;
-	}
-	
 	.info-Banner > .info-PostContent {
 		font-size: 1rem;
 	}
@@ -161,8 +148,6 @@
 	}
 	
 	.info-Footer {
-		left: 52px;
-		right: 52px;
 		font-size: 0.7rem;
 	}
 }
@@ -174,14 +159,7 @@
 }
 
 @media (min-width: 600px) {
-	.info-Banner {
-		left: 100px;
-		right: 100px;
-	}
-	
 	.info-Footer {
-		left: 60px;
-		right: 60px;
 		font-size: 0.8rem;
 	}
 }
@@ -213,8 +191,6 @@
 	}
 	
 	.info-Footer {
-		left: 70px;
-		right: 70px;
 		font-size: 0.9rem;
 	}
 }
@@ -233,11 +209,6 @@
 }
 
 @media (min-width: 900px) and (min-height: 400px) {
-	.info-Banner {
-		left: 120px;
-		right: 120px;
-	}
-	
 	.info-PostFooterWrapper {
 		margin-top: 2px;
 	}
@@ -253,11 +224,6 @@
 }
 
 @media (min-width: 1000px) and (min-height: 400px) {
-	.info-Banner {
-		left: 140px;
-		right: 140px;
-	}
-	
 	.info-Banner > .info-PostContent {
 		font-size: 1.6rem;
 		padding: 20px;
@@ -284,8 +250,6 @@
 	
 	.info-Footer {
 		font-size: 1.2rem;
-		margin-left: 80px;
-		margin-right: 80px;
 	}
 }
 
